<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/lg"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/glH1"
        app:layout_constraintGuide_percent="0.35"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/glV1"
        app:layout_constraintGuide_percent="0.15"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/glV2"
        app:layout_constraintGuide_percent="0.85"
        android:orientation="vertical"/>

    <TextView
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/glH1"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:text="@string/tv_title_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        app:layout_constraintRight_toLeftOf="@id/glV2"
        app:layout_constraintLeft_toRightOf="@id/glV1"
        app:layout_constraintTop_toBottomOf="@id/glH1"
        android:background="@drawable/border"
        android:layout_width="0dp"
        android:layout_height="230dp"
        android:orientation="vertical">

        <EditText
            android:maxLines="1"
            android:gravity="center"
            android:textColorHint="@color/white"
            android:hint="@string/et_user"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:background="@drawable/border_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="text"/>

        <EditText
            android:maxLines="1"
            android:gravity="center"
            android:textColorHint="@color/white"
            android:hint="@string/et_pass"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:background="@drawable/border_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPassword"/>

        <CheckBox
            android:text="@string/chk_remember"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:textAllCaps="false"
            android:id="@+id/btnLogin"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:text="@string/btn_login"
            android:background="@drawable/border_btn"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="40dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>